# Schweiz

./: .gitignore  3090_disable.sh  3090_enable.sh  5050_enable.sh  CPU_amd_disable.sh  CPU_amd_enable.sh  CPU_intel_disable.sh  CPU_intel_enable.sh  Repo für scripts.txt  ausprobieren.py  current_packages.txt  gpu_disable.sh  gpu_enable.sh  logger.py  logger2.py  logger3.py  logger4.py  p.py  requirements.txt  tall -y cupy cupy-cuda12x
New Folder/: intel_3090_gemm.py
New Folder/data123/raw/: energy_benchmark_simple.csv
data/: 03base.R  analyze.R
data/data/derived/: pilot_comp.csv  pilot_standardized.csv  plan_next_sizes_gemm.csv  plan_workloads.csv
data/raw/: pilot_full_production.csv  show.R
data/reports/: next_run_todo.txt  pilot_artifacts.txt
docs/: README.md  STAT_plan.md  measuring.md  reproduce.md  reproduce_v4.md
meine docs/: FUER_ENERGYMESSUNG.txt  Messprotokol.txt  Projektplan_v3.md  checkliste.txt  meine Archives.txt
results/: Fuer Paper.txt
results/2025-09-19/3090_on_amd_gemm/: 3090_full.py  env_vars.sh  run_bench.sh
results/2025-09-19/3090_on_amd_reduction/: Sätze.txt  amd_3090_red.py
results/2025-09-19/3090_on_intel_gemm/: 3090.py  Für Arbeit.txt  specs.txt
results/2025-09-19/5050_on_amd_gemm/: packages-freeze.txt  run_bench.sh  specs.txt
results/2025-09-19/5050_on_amd_reduction/: main.cu
results/2025-09-19/amd_gemm/: Für die Arbeit.txt  amd.py  run_bench.sh
results/2025-09-19/intel_3090_reduction_OUTDATED/: CMakeLists.txt  Text File.txt
results/2025-09-19/intel_3090_reduction_OUTDATED/CPU/05/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/GPU_CUB/03/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/cupy/02/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/cupy/03/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/custom/01/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/custom/03/raw/: reduction_benchmark.csv
results/2025-09-19/intel_3090_reduction_OUTDATED/custom/05/raw/: reduction_benchmark.csv
results/2025-09-19/intel_gemm/: intel.py  run_bench.sh
results/desktop/: CMakeLists.txt  intel_3090_red.py  main.cu
results/desktop/logs/: 20250919T103710Z_3090_memred_cpu_p10.out  20250919T103710Z_3090_memred_cubcpp_p500.out  20250919T103710Z_3090_memred_cupy_p500.out  20250919T103710Z_3090_memred_custom_p500.out  20250919T105838Z_cubcpp_N2e29.out
results/done_intel_3090_GEMM/: intel_3090_gemm.py  logger6.py
(+184 files in other folders)
